--- a/index.html
+++ b/index.html
@@ -79,38 +79,111 @@
                     <a href="#" class="btn-primary mt-3">Aprende mas</a>
                 </div>
 
-                <div class="carousel-item">
-                    <img src="img/f40.jpg" class="d-block w-100" alt="">
-                    <div class="carousel-caption">
-                        <h5>Calidad y confianza</h5>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatem, rem id dicta,
-                            iure ex delectus repudiandae quos praesentium aliquid vitae maxime. Qui recusandae eligendi enim
-                            facere, veritatis nemo! Aspernatur!
-                        </p>
-                        <a href="#" class="btn-primary mt-3">Aprende mas</a>
-                    </div>
+            </div>
 
-                    <div class="carousel-item">
-                        <img src="img/joder.webp" class="d-block w-100" alt="">
-                        <div class="carousel-caption">
-                            <h5>Alta gama en velocidad</h5>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatem, rem id dicta,
-                                iure ex delectus repudiandae quos praesentium aliquid vitae maxime. Qui recusandae eligendi enim
-                                facere, veritatis nemo! Aspernatur!
-                            </p>
-                            <a href="#" class="btn-primary mt-3">Aprende mas</a>
+            <div class="carousel-item">
+                <img src="img/f40.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption">
+                    <h5>Calidad y confianza</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatem, rem id dicta,
+                        iure ex delectus repudiandae quos praesentium aliquid vitae maxime. Qui recusandae eligendi enim
+                        facere, veritatis nemo! Aspernatur!
+                    </p>
+                    <a href="#" class="btn-primary mt-3">Aprende mas</a>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img src="img/joder.webp" class="d-block w-100" alt="">
+                <div class="carousel-caption">
+                    <h5>Alta gama en velocidad</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatem, rem id dicta,
+                        iure ex delectus repudiandae quos praesentium aliquid vitae maxime. Qui recusandae eligendi enim
+                        facere, veritatis nemo! Aspernatur!
+                    </p>
+                    <a href="#" class="btn-primary mt-3">Aprende mas</a>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselE" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselE" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <section class="about section-padding">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div class="about-img">
+                            <img src="img/ff.webp" class="img-fluid" alt="">
                         </div>
-            
+                    </div>
+                    <div class="col-lg-8 col-md col-12 ps-lg-5 mt-md-5">
+                        <div class="about-text text-white">
+                            <h2>Autobomilia <br>Servicios</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nihil modi odio ex
+                                temporibus eveniet cum non assumenda debitis fugit dignissimos, voluptas, rem quos amet
+                                dolor alias architecto molestiae molestias.
+                            </p>
+                            <a href="#" class="btn btn-primary">Mas Informacion</a>
+                        </div>
+
+                    </div>
+                </div>
 
             </div>
-        </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        </section>
+
+
+        <section class="services section-padding">
+
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="section-header text-center text-white pb-5">
+                            <h2>Nuestros Servicios</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste aliquid doloremque
+                                ullam eius labore magnam nemo temporibus rerum veritatis dolor a explicabo magni,
+                                voluptas fugiat facilis maxime modi sequi!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-12 col-lg-4">
+                        <div class="card text-white text-center bg-dark pb-2">
+                            <div class="card-body">
+                                <i class="bi bi-laptop">
+                                    <h3 class="card-title">Registro</h3>
+                                    <p class="lead">
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis possimus
+                                        quasi veritatis recusandae! Rem, nam amet eius eveniet ut, aut similique minus
+                                        architecto necessitatibus repellat impedit reiciendis autem illum laborum!
+                                    </p>
+                                    <button class="btn bg-primary text-white">Mas Informacion</button>
+                                </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
